# PLEASE_PLEASE_PLEASE_STOP_USING_CONDA_FOR_ANYTHING_IT_IS_THE_WORST_PIECE_OF_SOFTWARE_KNOWN_TO_MAN

./: Dockerfile  README.md  pyproject.toml
bvh/src/: construct.cu
