[project]
name = "relightable3dgaussian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bvh-tracing",
    "dearpygui>=2.0.0",
    "imageio>=2.37.0",
    "kornia>=0.8.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "nvdiffrast",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "plyfile>=1.1.2",
    "pyexr>=0.5.0",
    "r3dg-rasterization",
    "scipy>=1.16.0",
    "simple-knn",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.sources]
nvdiffrast = { git = "https://github.com/NVlabs/nvdiffrast" }
simple-knn = { git = "https://github.com/camenduru/simple-knn" }
bvh-tracing = { path = "bvh" }
r3dg-rasterization = { path = "r3dg-rasterization" }
